# KRCL

./: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
app-cloudapp/: build.gradle
app-frontend/: package-lock.json  package.json
app-frontend/public/: index.html
app-frontend/src/: index.js  setupTest.js
app-frontend/src/api/: apiCalls.js  apiCalls.spec.js
app-frontend/src/components/: ButtonWithProgress.js  Input.js  Input.spec.js  ReactChartKick.js  ReactGoogleCharts.js  (+3 more)
app-material-ui-frontend/iot-vt/: .eslintrc.json  0.14.0  README.md  cert.pem  csr.pem  cypress.json  key.pem  package-lock.json  package.json
app-protocol-viewer/: build.gradle
app-template/: build.gradle
config/sql/: createDb.sql
lib-cloudprotocol/: build.gradle
lib-edgedevicesim/: build.gradle
lib-expression-language/: build.gradle
lib-nelkinda-core/: build.gradle
lib-nelkinda-desktop/: build.gradle
lib-nelkinda-test/: build.gradle
lib-sensorstore/: build.gradle
lib-sensorstore-file/: build.gradle
lib-sensorstore-influx/: build.gradle
lib-sensorstore-multiplex/: build.gradle
lib-template/: build.gradle
poc-content-negotiation/: README.md  build.gradle
poc-exp4j/: build.gradle
poc-flatfile-server/: README.md  build.gradle
poc-influx/: Makefile  README.md  build.gradle
poc-protocol-c/: .gitignore  CMakeLists.txt  README.md
poc-protocol-c/include/: VICP_protocol.h
poc-protocol-c/src/: VICP_message.c  VICP_xorShift.c
poc-protocol-c/test/: VICP_send_test.c  VICP_send_test.h  VICP_xorShift_test.c  VICP_xorShift_test.h  test_main.c
(+415 files in other folders)
